fix: menu covered "submit" button on newPost page

--- a/packages/client/src/components/MenuShell/MenuShell.scss
+++ b/packages/client/src/components/MenuShell/MenuShell.scss
@@ -11,6 +11,8 @@
 
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.25);
 
+  z-index: 100;
+
   .ctaSignIn {
     font-size: 0.75rem;
     margin-bottom: 16px;
